[package]
name = "ffs"
version = "0.1.0"
authors = ["Michael Greenberg <michael.greenberg@stevens.edu>"]
license = "GPL-3.0"
description = "ffs---the _f_ile _f_ile_s_ystem---lets you mount semi-structured data (like JSON) as a filesystem, letting you work with modern formats using your familiar shell tools."
website = "https://mgree.github.io/ffs"
repository = "https://github.com/mgree/ffs"
edition = "2018"

[dependencies]
base64 = "0.13.0"
clap = "2.0"
fuser = "0.8"
libc = "0.2.51"
serde_json = "1.0"
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2.18"
yaml-rust = "0.4.5"
