[package]
name = "ffs"
version = "0.1.2"
authors = ["Michael Greenberg <michael.greenberg@stevens.edu>"]
license = "GPL-3.0"
description = "ffs---the File FileSystem---lets you mount semi-structured data (like JSON) as a filesystem, letting you work with modern formats using your familiar shell tools."
readme = "README.md"
homepage = "https://mgree.github.io/ffs"
repository = "https://github.com/mgree/ffs"
keywords = ["data", "fuse", "json", "shell", "yaml"]
categories = ["command-line-utilities", "encoding", "filesystem"]
edition = "2024"

exclude = [
    ".github/*",
    ".gitignore",
    "binary/*",
    "docs/*",
    "man/*",
    "json/*",
    "run_tests.sh",
    "tests/*",
    "toml/*",
    "yaml/*",
]

[dependencies]
base64 = "0.22"
clap = "2.0"
fuser = "0.16"
libc = "0.2"
regex = "1.12"
serde_json = "1.0"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
xattr = "1.6"
yaml-rust = "0.4.5"
