[package]
name = "nodelike"
version = "0.1.2"
authors = ["Michael Greenberg <michael.greenberg@stevens.edu>"]
license = "GPL-3.0"
description = "a library offering a generic interface to semi-structured data (like JSON and YAML)."
readme = "README.md"
homepage = "https://mgree.github.io/ffs"
repository = "https://github.com/mgree/ffs"
keywords = ["data", "fuse", "json", "shell", "yaml"]
categories = ["command-line-utilities", "encoding", "filesystem"]
edition = "2024"

exclude = [
    ".github/*",
    ".gitignore",
    "binary/*",
    "docs/*",
    "man/*",
    "json/*",
    "run_tests.sh",
    "tests/*",
    "toml/*",
    "yaml/*",
]

[dependencies]
base64 = "0.22"
clap = "4.5"
clap_complete = "4.5"
regex = "1.12"
serde_json = "1.0"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
yaml-rust = "0.4.5"
